chrome/browser/ui/extensions/hosted_app_browser_controller.cc
@@ -23,7 +23,9 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #include "components/url_formatter/url_formatter.h"
 #include "content/public/browser/browser_context.h"
 #include "content/public/browser/navigation_entry.h"
+#include "content/public/browser/render_view_host.h"
 #include "content/public/browser/web_contents.h"
+#include "content/public/common/renderer_preferences.h"
 #include "extensions/browser/extension_registry.h"
 #include "extensions/common/extension.h"
 #include "ui/gfx/favicon_size.h"
@@ -82,6 +84,14 @@ bool HostedAppBrowserController::IsForExperimentalHostedAppBrowser(
 }
 
 // static
+void HostedAppBrowserController::SetAppPrefsForWebContents(
+    content::WebContents* web_contents) {
+  auto* rvh = web_contents->GetRenderViewHost();
+
+  web_contents->GetMutableRendererPrefs()->can_accept_load_drops = false;
+  rvh->SyncRendererPrefs();
+}
+
 base::string16 HostedAppBrowserController::FormatUrlOrigin(const GURL& url) {
   return url_formatter::FormatUrl(
       url.GetOrigin(),
@@ -97,9 +107,13 @@ HostedAppBrowserController::HostedAppBrowserController(Browser* browser)
     : SiteEngagementObserver(SiteEngagementService::Get(browser->profile())),
       browser_(browser),
       extension_id_(
-          web_app::GetExtensionIdFromApplicationName(browser->app_name())) {}
+          web_app::GetExtensionIdFromApplicationName(browser->app_name())) {
+  browser_->tab_strip_model()->AddObserver(this);
+}
 
-HostedAppBrowserController::~HostedAppBrowserController() {}
+HostedAppBrowserController::~HostedAppBrowserController() {
+  browser_->tab_strip_model()->RemoveObserver(this);
+}
 
 bool HostedAppBrowserController::IsForInstalledPwa(
     content::WebContents* web_contents) const {
@@ -227,6 +241,21 @@ void HostedAppBrowserController::OnEngagementEvent(
 
   UMA_HISTOGRAM_ENUMERATION(kPwaWindowEngagementTypeHistogram, type,
                             SiteEngagementService::ENGAGEMENT_LAST);
+}
+
+void HostedAppBrowserController::TabInsertedAt(TabStripModel* tab_strip_model,
+                                               content::WebContents* contents,
+                                               int index,
+                                               bool foreground) {
+  HostedAppBrowserController::SetAppPrefsForWebContents(contents);
+}
+
+void HostedAppBrowserController::TabDetachedAt(content::WebContents* contents,
+                                               int index) {
+  auto* rvh = contents->GetRenderViewHost();
+
+  contents->GetMutableRendererPrefs()->can_accept_load_drops = true;
+  rvh->SyncRendererPrefs();
 }
 
 }  // namespace extensions
